frontend/src/styles/global.scss
@import 'variables.scss';
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins/_breakpoints';

.bc-bg-yellow {
  background: $colorGold;
}
.bc-color-white {
  color: $colorWhite;
}
.bc-color-blue-dk {
  color: $colorBlue;
}
.bc-bg-blue-dk {
  background: $colorBlue;
}
.bc-bg-blue-md {
  background: $colorBlueMed;
}

.capitalize {
  text-transform: capitalize;
}

#root {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  min-width: 100%;
}

label {
  // override BC Govt Bootstrap defaults
  font-size: unset !important;
}

html,
body {
  scroll-behavior: smooth;
  min-height: 100vh;
  min-width: 100%;
  margin: 0;
}

body {
  color: $colorGrey;
  letter-spacing: normal;
  font-family: $globalFont;
}

head,
script,
style {
  display: none;
}

header nav {
  border: none;
}

a {
  color: $colorBlueMed;
  text-decoration: none;
  &:hover {
    color: $colorBlue;
    text-decoration: underline;
  }
  &:not(.btn):focus {
    color: $colorBlue;
  }
}

.page-padding {
  padding: $pagePadding;

  @media (min-width: $lgBreakpoint) {
    padding: $pagePaddingLg;
  }
}

.page {
  @extend .page-padding;
  width: 100%;
  max-width: calc($pageMaxWidth + $pagePadding * 2);

  @media (min-width: $lgBreakpoint) {
    max-width: calc($pageMaxWidth + $pagePaddingLg * 2);
  }
}

.page-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;

  &.bg-brown-light {
    background-color: $colorBrownLight;
  }
}

.page-nav-container {
  width: 100%;

  &.main {
    background-color: $colorBlue;
  }

  &.sub {
    background-color: $colorBlueMed;
  }

  &.search {
    background-color: $colorBlueLight;
  }
}

.link-color {
  color: $colorBlueMed;
}

.page-nav {
  position: relative;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  margin: 0px auto;
  justify-content: space-between;
  padding: 0 $pagePadding;

  @include media-breakpoint-up(lg) {
    max-width: $pageMaxWidth;
    padding: $pagePaddingLg;
  }
}

main {
  display: flex;
  flex-direction: column;
  flex: 1;
  flex-grow: 1;
  min-height: 100%;
  margin: 0;
  padding: 0;
}

.line {
  background-color: $colorGold;
  height: 2px;
}

/** Typography overrides **/

// override BC Govt Bootstrap defaults

h1 {
  font-size: 32px;
  color: $colorBlue;
}

h1,
h2 {
  color: $colorBlue;
}

h2.section-heading {
  position: relative;
  padding-bottom: 2rem;
  &:after {
    position: absolute;
    content: '';
    height: 3px;
    bottom: 9px;
    margin: 0;
    left: 0;
    right: 0;
    width: 5rem;
    background: #fdb813;
  }
}

tr,
th,
td {
  padding: 1rem;
}

figure.table {
  color: $colorGrey;
  table {
    width: 100%;
    tr {
      &:first-of-type {
        th,
        td {
          border-top: 1px solid $colorGreyLight;
        }
      }
      & > :first-child {
        background: $colorBrownLight;
      }
    }
    th,
    td {
      border-bottom: 1px solid $colorGreyLight;
    }
    th {
      background: $colorBrownLight;
    }
  }

  &.horizontal-heading {
    overflow-x: auto;
    table {
      min-width: 600px;
    }
    &::-webkit-scrollbar {
      height: 5px;
    }
    &::-webkit-scrollbar-thumb {
      background-color: rgba($colorBlack, 0.2);
      border-radius: 5px;
    }
  }
}

.btn {
  font-weight: 700;
  height: 48px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.btn-link {
  color: $colorBlue;
  text-decoration: none;
  border: none;

  &:hover {
    color: $colorBlue;
    text-decoration: underline;
  }
}

.btn-primary {
  background-color: $colorBlue;
  border-color: $colorBlue;
  color: $colorWhite;
  &:hover {
    color: $colorWhite;
    background-color: $colorBlueMed;
  }
}

.btn-secondary {
  background-color: $colorWhite;
  border-color: $colorBlue;
  color: $colorBlue;
  &:hover {
    color: $colorBlue;
    background-color: $colorBlueLight;
  }
}

.btn-primary:not(:disabled):not(.disabled):active {
  background-color: $colorBlue;
  border-color: $colorBlue;
}

.btn-secondary:not(:disabled):not(.disabled):active {
  background-color: $colorWhite;
  border-color: $colorBlue;
}

.icon-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;

  img,
  svg {
    margin-right: 8px;
  }
}

.advisory-container {
  border-top: 1px solid $colorGreyMed;
  border-bottom: 1px solid $colorGreyMed;
  padding: 1rem;
  background-color: $colorBrownLight;

  p {
    margin-top: 2rem;
    margin-bottom: 0;
  }
}

